--- a/task-tracker/style.css
+++ b/task-tracker/style.css
@@ -21,4 +21,11 @@ li{
     list-style-type: none;
     display: flex;
     column-gap: 10px;
+    padding:6px 15px;
+}
+
+.completed {
+    text-decoration: line-through;
+    color: gray;
+    opacity: 0.7;
 }
